Cosmetic
- Improved the First Join Message to be more stylish, accessible, and helpful.
- All default bot messages are now sent using a MessageEmbed.
- The Roll command can now include an optional memo about the roll.
- The What Are The Odds command now rolls its own RNG instead of using the Roll command.
- The Timer command got a new alias and adjusted styling.
- Message Pins now feature the author's profile image and a timestamp.
- Hangman now updates an original message instead of sending a new message for each guess.
- ForumWeapon lists and searches are now paginated.
- Polls now update an original message instead of sending a new message when closed.
- Polls now support up to 26 options.
- Polls now number their options A-Z instead of 1-9.
- Polls now display a percentage for each option.
- Added new messages and error texts for various commands.
- Renamed several bot settings to be more clear regarding their purpose.

Adjustments
- Storytime stories now follow a defined data structure.
- The Modify command's structure is now more defined.
- All default language files have been renamed to indicate they are based in English.
- Added new permissions for Pin.

Fixes
- Tally emote reactions were not adjusting tallies.
- Replies do not ping the author by default for most commands.

Removals
- Random responses can no longer send a random gif using the [gif] prefix. This was removed due to technical limitations with embedding GIFs into a message.

Technical
- Updated libraries.
- Refactored command processing to improve reliability and performance.
- Commands now inherit from a Class instead of an Interface, allowing for more shared logic.
- Brains now save the IDs for roles, emotes, and channels, instead of the names for each.
- Regex generation is now separated into more steps for easier debugging and improved command matching.